added header to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>FlexDesign</title>
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+<header>
+  <h1>Flex Design</h1>
+  <div class="subtitle">A responsive template from <abbr title="12th one year course of web development at Digital Career Institute in Berlin">FBW-12</abbr></div>
+</header>
 
 <body>
 
