--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
   <h1>Flex Design</h1>
   <div class="subtitle">A responsive template from <abbr title="12th one year course of web development at Digital Career Institute in Berlin">FBW-12</abbr></div>
 </header>
+<main>
+  <article class="jumbotron">
+    <h2 class="jumbotron-head">The Jumbotron</h2>
+    <p class="jumbotron-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde atque quasi ipsa rerum
+      commodi consectetur
+      accusamus aliquam animi, maiores incidunt quibusdam recusandae iusto optio aperiam beatae magni! Aspernatur
+      placeat unde quasi, voluptate quisquam minus consectetur adipisci pariatur in neque consequuntur!</p>
+    <button class="jumbotron-button">Go to link</button>
+  </article>
+  <article class="main-content"></article>
+  <section class="further-articles">
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
+  </section>
+  <article class="last"></article>
+</main>
 
 <body>
 
