added most important content and section with further articles

--- a/index.html
+++ b/index.html
@@ -21,12 +21,51 @@
       placeat unde quasi, voluptate quisquam minus consectetur adipisci pariatur in neque consequuntur!</p>
     <button class="jumbotron-button">Go to link</button>
   </article>
-  <article class="main-content"></article>
+  <article class="main-content">
+    <h2 class="main-head">🔥 My Most Important Content 🔥</h2>
+    <p class="main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, reprehenderit. Ad alias
+      laboriosam natus itaque sapiente, fugiat harum dignissimos cum voluptates illum placeat quisquam quibusdam.
+      Accusamus dolore amet esse similique officia quisquam dolorem, deserunt modi architecto, optio tempore
+      consectetur natus molestiae at. Quidem tempora eveniet nobis facere, explicabo neque animi qui esse soluta, fuga,
+      repellendus iure dolore inventore necessitatibus eaque.</p>
+  </article>
   <section class="further-articles">
-    <article></article>
-    <article></article>
-    <article></article>
-    <article></article>
+    <article class="further">
+      <section class="container">
+        <h2>Article 1</h2>
+      </section>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo veniam ea illum accusantium, beatae laborum,
+        delectus atque similique sequi nulla commodi consequatur. Dolore maxime facilis adipisci laboriosam praesentium
+        iste molestiae distinctio est at officiis! Rem nobis voluptas velit ex ullam?</p>
+      <button>More</button>
+    </article>
+    <article class="further">
+      <section class="container">
+        <h2>Article 2</h2>
+      </section>
+      <p>Ipsum voluptatem quo accusamus molestias deserunt fugiat non temporibus, maiores laudantium autem neque culpa
+        mollitia totam cum et dolorem at iusto vel, porro sunt dolorum rem repudiandae quia perferendis. Laboriosam
+        nisi, earum illum dolor voluptatem quas perferendis voluptas expedita minima.</p>
+      <button>More</button>
+    </article>
+    <article class="further">
+      <section class="container">
+        <h2>Article 3</h2>
+      </section>
+      <p>Deserunt, placeat voluptatibus asperiores dicta reprehenderit velit quos ipsum ullam ratione at accusamus quam
+        nemo expedita minima repudiandae rem officiis voluptate architecto nam quas a minus ab id distinctio. Aliquam
+        reiciendis totam corporis dignissimos sunt reprehenderit expedita vel eum consectetur.</p>
+      <button>More</button>
+    </article>
+    <article class="further">
+      <section class="container">
+        <h2>Article 4</h2>
+      </section>
+      <p>Itaque unde magnam inventore neque fugit nihil quae saepe maxime dicta. Modi optio rem rerum quos ratione nemo
+        neque culpa totam numquam harum minima quaerat officia quis, ex, labore explicabo iste dolores architecto dolor
+        repudiandae vitae eius autem eos laudantium!</p>
+      <button>More</button>
+    </article>
   </section>
   <article class="last"></article>
 </main>
