added last article

--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@
       <button>More</button>
     </article>
   </section>
-  <article class="last"></article>
+  <article class="last">
+    <h2>Last Article</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero rem hic dolorum delectus necessitatibus, maiores
+      a? Voluptatem, labore blanditiis ab sapiente id cumque, ad aspernatur vel facere fugiat dolore voluptas,
+      quibusdam modi? Tempora inventore ad hic veniam iusto dolorum et?</p>
+    <button>Get started</button>
+  </article>
 </main>
 
 <body>
