added copyright to footer

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
     <button>Get started</button>
   </article>
 </main>
+<footer>
+  <div class="icons"></div>
+  <div class="copyright">Copyright &copy; Stefan Klinkusch, 2018</div>
+</footer>
 
 <body>
 
