added content of navbar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,40 @@
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <header>
+  <nav>
+    <ul>
+      <li class="dropdown-a"><a href="#">Info</a>
+        <nav class="dropmenu-a">
+          <ul>
+            <li><a href="#">Item A1</a></li>
+            <li><a href="#">Item A2</a></li>
+            <li><a href="#">Item A3</a></li>
+            <li><a href="#">Item A4</a></li>
+          </ul>
+        </nav>
+      </li>
+      <li class="dropdown-b"><a href="#">Links</a>
+        <nav class="dropmenu-b">
+          <ul>
+            <li><a href="#">Item B1</a></li>
+            <li><a href="#">Item B2</a></li>
+            <li><a href="#">Item B3</a></li>
+            <li><a href="#">Item B4</a></li>
+          </ul>
+        </nav>
+      </li>
+      <li class="dropdown-c"><a href="#">Extra</a>
+        <nav class="dropmenu-c">
+          <ul>
+            <li><a href="#">Item C1</a></li>
+            <li><a href="#">Item C2</a></li>
+            <li><a href="#">Item C3</a></li>
+            <li><a href="#">Item C4</a></li>
+          </ul>
+        </nav>
+      </li>
+    </ul>
+  </nav>
   <h1>Flex Design</h1>
   <div class="subtitle">A responsive template from <abbr title="12th one year course of web development at Digital Career Institute in Berlin">FBW-12</abbr></div>
 </header>
