put nav outside of header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
-<header>
-  <nav>
+
+<body>
+  <nav class="mainnav">
     <ul>
       <li class="dropdown-a"><a href="#">Info</a>
         <nav class="dropmenu-a">
@@ -44,79 +45,85 @@
       </li>
     </ul>
   </nav>
-  <h1>Flex Design</h1>
-  <div class="subtitle">A responsive template from <abbr title="12th one year course of web development at Digital Career Institute in Berlin">FBW-12</abbr></div>
-</header>
-<main>
-  <article class="jumbotron">
-    <h2 class="jumbotron-head">The Jumbotron</h2>
-    <p class="jumbotron-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde atque quasi ipsa rerum
-      commodi consectetur
-      accusamus aliquam animi, maiores incidunt quibusdam recusandae iusto optio aperiam beatae magni! Aspernatur
-      placeat unde quasi, voluptate quisquam minus consectetur adipisci pariatur in neque consequuntur!</p>
-    <button class="jumbotron-button">Go to link</button>
-  </article>
-  <article class="main-content">
-    <h2 class="main-head">🔥 My Most Important Content 🔥</h2>
-    <p class="main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, reprehenderit. Ad alias
-      laboriosam natus itaque sapiente, fugiat harum dignissimos cum voluptates illum placeat quisquam quibusdam.
-      Accusamus dolore amet esse similique officia quisquam dolorem, deserunt modi architecto, optio tempore
-      consectetur natus molestiae at. Quidem tempora eveniet nobis facere, explicabo neque animi qui esse soluta, fuga,
-      repellendus iure dolore inventore necessitatibus eaque.</p>
-  </article>
-  <section class="further-articles">
-    <article class="further">
-      <section class="container">
-        <h2>Article 1</h2>
-      </section>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo veniam ea illum accusantium, beatae laborum,
-        delectus atque similique sequi nulla commodi consequatur. Dolore maxime facilis adipisci laboriosam praesentium
-        iste molestiae distinctio est at officiis! Rem nobis voluptas velit ex ullam?</p>
-      <button>More</button>
+  <header>
+    <h1>Flex Design</h1>
+    <div class="subtitle">A responsive template from <abbr title="12th one year course of web development at Digital Career Institute in Berlin">FBW-12</abbr></div>
+  </header>
+  <main>
+    <article class="jumbotron">
+      <h2 class="jumbotron-head">The Jumbotron</h2>
+      <p class="jumbotron-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde atque quasi ipsa rerum
+        commodi consectetur
+        accusamus aliquam animi, maiores incidunt quibusdam recusandae iusto optio aperiam beatae magni! Aspernatur
+        placeat unde quasi, voluptate quisquam minus consectetur adipisci pariatur in neque consequuntur!</p>
+      <button class="jumbotron-button">Go to link</button>
     </article>
-    <article class="further">
-      <section class="container">
-        <h2>Article 2</h2>
-      </section>
-      <p>Ipsum voluptatem quo accusamus molestias deserunt fugiat non temporibus, maiores laudantium autem neque culpa
-        mollitia totam cum et dolorem at iusto vel, porro sunt dolorum rem repudiandae quia perferendis. Laboriosam
-        nisi, earum illum dolor voluptatem quas perferendis voluptas expedita minima.</p>
-      <button>More</button>
+    <article class="main-content">
+      <h2 class="main-head">🔥 My Most Important Content 🔥</h2>
+      <p class="main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, reprehenderit. Ad
+        alias
+        laboriosam natus itaque sapiente, fugiat harum dignissimos cum voluptates illum placeat quisquam quibusdam.
+        Accusamus dolore amet esse similique officia quisquam dolorem, deserunt modi architecto, optio tempore
+        consectetur natus molestiae at. Quidem tempora eveniet nobis facere, explicabo neque animi qui esse soluta,
+        fuga,
+        repellendus iure dolore inventore necessitatibus eaque.</p>
     </article>
-    <article class="further">
-      <section class="container">
-        <h2>Article 3</h2>
-      </section>
-      <p>Deserunt, placeat voluptatibus asperiores dicta reprehenderit velit quos ipsum ullam ratione at accusamus quam
-        nemo expedita minima repudiandae rem officiis voluptate architecto nam quas a minus ab id distinctio. Aliquam
-        reiciendis totam corporis dignissimos sunt reprehenderit expedita vel eum consectetur.</p>
-      <button>More</button>
+    <section class="further-articles">
+      <article class="further">
+        <section class="container">
+          <h2>Article 1</h2>
+        </section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo veniam ea illum accusantium, beatae laborum,
+          delectus atque similique sequi nulla commodi consequatur. Dolore maxime facilis adipisci laboriosam
+          praesentium
+          iste molestiae distinctio est at officiis! Rem nobis voluptas velit ex ullam?</p>
+        <button>More</button>
+      </article>
+      <article class="further">
+        <section class="container">
+          <h2>Article 2</h2>
+        </section>
+        <p>Ipsum voluptatem quo accusamus molestias deserunt fugiat non temporibus, maiores laudantium autem neque
+          culpa
+          mollitia totam cum et dolorem at iusto vel, porro sunt dolorum rem repudiandae quia perferendis. Laboriosam
+          nisi, earum illum dolor voluptatem quas perferendis voluptas expedita minima.</p>
+        <button>More</button>
+      </article>
+      <article class="further">
+        <section class="container">
+          <h2>Article 3</h2>
+        </section>
+        <p>Deserunt, placeat voluptatibus asperiores dicta reprehenderit velit quos ipsum ullam ratione at accusamus
+          quam
+          nemo expedita minima repudiandae rem officiis voluptate architecto nam quas a minus ab id distinctio. Aliquam
+          reiciendis totam corporis dignissimos sunt reprehenderit expedita vel eum consectetur.</p>
+        <button>More</button>
+      </article>
+      <article class="further">
+        <section class="container">
+          <h2>Article 4</h2>
+        </section>
+        <p>Itaque unde magnam inventore neque fugit nihil quae saepe maxime dicta. Modi optio rem rerum quos ratione
+          nemo
+          neque culpa totam numquam harum minima quaerat officia quis, ex, labore explicabo iste dolores architecto
+          dolor
+          repudiandae vitae eius autem eos laudantium!</p>
+        <button>More</button>
+      </article>
+    </section>
+    <article class="last">
+      <h2>Last Article</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero rem hic dolorum delectus necessitatibus,
+        maiores
+        a? Voluptatem, labore blanditiis ab sapiente id cumque, ad aspernatur vel facere fugiat dolore voluptas,
+        quibusdam modi? Tempora inventore ad hic veniam iusto dolorum et?</p>
+      <button>Get started</button>
     </article>
-    <article class="further">
-      <section class="container">
-        <h2>Article 4</h2>
-      </section>
-      <p>Itaque unde magnam inventore neque fugit nihil quae saepe maxime dicta. Modi optio rem rerum quos ratione nemo
-        neque culpa totam numquam harum minima quaerat officia quis, ex, labore explicabo iste dolores architecto dolor
-        repudiandae vitae eius autem eos laudantium!</p>
-      <button>More</button>
-    </article>
-  </section>
-  <article class="last">
-    <h2>Last Article</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero rem hic dolorum delectus necessitatibus, maiores
-      a? Voluptatem, labore blanditiis ab sapiente id cumque, ad aspernatur vel facere fugiat dolore voluptas,
-      quibusdam modi? Tempora inventore ad hic veniam iusto dolorum et?</p>
-    <button>Get started</button>
-  </article>
-</main>
-<footer>
-  <div class="icons"></div>
-  <div class="copyright">Copyright &copy; Stefan Klinkusch, 2018</div>
-</footer>
-
-<body>
-
+  </main>
+  <footer>
+    <div class="icons"></div>
+    <div class="copyright">Copyright &copy; Stefan Klinkusch, 2018</div>
+  </footer>
 </body>
 
 </html>
