--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         commodi consectetur
         accusamus aliquam animi, maiores incidunt quibusdam recusandae iusto optio aperiam beatae magni! Aspernatur
         placeat unde quasi, voluptate quisquam minus consectetur adipisci pariatur in neque consequuntur!</p>
-      <button class="jumbotron-button">Go to link</button>
+      <div class="button-container">
+        <button class="jumbotron-button">Go to link</button>
+      </div>
     </article>
     <article class="main-content">
       <h2 class="main-head">🔥 My Most Important Content 🔥</h2>
