styled article section without images

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
           delectus atque similique sequi nulla commodi consequatur. Dolore maxime facilis adipisci laboriosam
           praesentium
           iste molestiae distinctio est at officiis! Rem nobis voluptas velit ex ullam?</p>
-        <button>More</button>
+        <div class="button-container">
+          <button class="article-button">More</button>
+        </div>
       </article>
       <article class="further">
         <section class="container">
@@ -89,7 +91,9 @@
           culpa
           mollitia totam cum et dolorem at iusto vel, porro sunt dolorum rem repudiandae quia perferendis. Laboriosam
           nisi, earum illum dolor voluptatem quas perferendis voluptas expedita minima.</p>
-        <button>More</button>
+        <div class="button-container">
+          <button class="article-button">More</button>
+        </div>
       </article>
       <article class="further">
         <section class="container">
@@ -99,7 +103,9 @@
           quam
           nemo expedita minima repudiandae rem officiis voluptate architecto nam quas a minus ab id distinctio. Aliquam
           reiciendis totam corporis dignissimos sunt reprehenderit expedita vel eum consectetur.</p>
-        <button>More</button>
+        <div class="button-container">
+          <button class="article-button">More</button>
+        </div>
       </article>
       <article class="further">
         <section class="container">
@@ -110,7 +116,9 @@
           neque culpa totam numquam harum minima quaerat officia quis, ex, labore explicabo iste dolores architecto
           dolor
           repudiandae vitae eius autem eos laudantium!</p>
-        <button>More</button>
+        <div class="button-container">
+          <button class="article-button">More</button>
+        </div>
       </article>
     </section>
     <article class="last">
