styled last article

--- a/index.html
+++ b/index.html
@@ -122,12 +122,15 @@
       </article>
     </section>
     <article class="last">
-      <h2>Last Article</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero rem hic dolorum delectus necessitatibus,
+      <h2 class="last-head">Last Article</h2>
+      <p class="last-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero rem hic dolorum delectus
+        necessitatibus,
         maiores
         a? Voluptatem, labore blanditiis ab sapiente id cumque, ad aspernatur vel facere fugiat dolore voluptas,
         quibusdam modi? Tempora inventore ad hic veniam iusto dolorum et?</p>
-      <button>Get started</button>
+      <div class="button-container">
+        <button class="last-button">Get started</button>
+      </div>
     </article>
   </main>
   <footer>
