--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>FlexDesign</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="./assets/fontawesome/fontawesome-free-5.5.0-web/css/all.css">
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
@@ -134,7 +135,14 @@
     </article>
   </main>
   <footer>
-    <div class="icons"></div>
+    <div class="icons">
+      <span class="fab fa-facebook-square"></span>
+      <span class="fab fa-google-plus-square"></span>
+      <span class="fab fa-twitter-square"></span>
+      <span class="fab fa-instagram"></span>
+      <span class="fab fa-linkedin"></span>
+      <span class="fas fa-envelope-square"></span>
+    </div>
     <div class="copyright">Copyright &copy; Stefan Klinkusch, 2018</div>
   </footer>
 </body>
