added colors to social links, hover effect on images

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </article>
     <article class="main-content">
-      <h2 class="main-head">🔥 My Most Important Content 🔥</h2>
+      <h2 class="main-head">🐗 My Most Important Content 🐗</h2>
       <p class="main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, reprehenderit. Ad
         alias
         laboriosam natus itaque sapiente, fugiat harum dignissimos cum voluptates illum placeat quisquam quibusdam.
