fixed some responsive display errors

--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
   </main>
   <footer>
     <div class="icons">
-      <span class="fab fa-facebook-square"></span>
-      <span class="fab fa-google-plus-square"></span>
-      <span class="fab fa-twitter-square"></span>
-      <span class="fab fa-instagram"></span>
-      <span class="fab fa-linkedin"></span>
-      <span class="fas fa-envelope-square"></span>
+      <span class="fab fa-facebook-square">&nbsp;</span>
+      <span class="fab fa-google-plus-square">&nbsp;</span>
+      <span class="fab fa-twitter-square">&nbsp;</span>
+      <span class="fab fa-instagram">&nbsp;</span>
+      <span class="fab fa-linkedin">&nbsp;</span>
+      <span class="fas fa-envelope-square">&nbsp;</span>
     </div>
     <div class="copyright">Copyright &copy; Stefan Klinkusch, 2018</div>
   </footer>
