cleaned up stylesheet

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </nav>
   <header>
     <h1>Flex Design</h1>
-    <div class="subtitle">A responsive template from <abbr title="12th one year course of web development at Digital Career Institute in Berlin">FBW-12</abbr></div>
+    <div class="subtitle">A responsive template from <a href="#" class="fbw12">FBW-12</a></div>
   </header>
   <main>
     <article class="jumbotron">
