changed insertation of images in article sct., hover effect

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <section class="further-articles">
       <article class="further">
         <section class="container">
+          <a href=""><img src="./assets/images/niilo-isotalo-379496-unsplash.jpg" alt=""></a>
           <h2>Article 1</h2>
         </section>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo veniam ea illum accusantium, beatae laborum,
@@ -86,6 +87,7 @@
       </article>
       <article class="further">
         <section class="container">
+          <a href=""><img src="./assets/images/niilo-isotalo-379496-unsplash.jpg" alt=""></a>
           <h2>Article 2</h2>
         </section>
         <p>Ipsum voluptatem quo accusamus molestias deserunt fugiat non temporibus, maiores laudantium autem neque
@@ -98,6 +100,7 @@
       </article>
       <article class="further">
         <section class="container">
+          <a href=""><img src="./assets/images/niilo-isotalo-379496-unsplash.jpg" alt=""></a>
           <h2>Article 3</h2>
         </section>
         <p>Deserunt, placeat voluptatibus asperiores dicta reprehenderit velit quos ipsum ullam ratione at accusamus
@@ -110,6 +113,7 @@
       </article>
       <article class="further">
         <section class="container">
+          <a href=""><img src="./assets/images/niilo-isotalo-379496-unsplash.jpg" alt=""></a>
           <h2>Article 4</h2>
         </section>
         <p>Itaque unde magnam inventore neque fugit nihil quae saepe maxime dicta. Modi optio rem rerum quos ratione
