marked social networks as links, styled them

--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
   </main>
   <footer>
     <div class="icons">
-      <span class="fab fa-facebook-square">&nbsp;</span>
-      <span class="fab fa-google-plus-square">&nbsp;</span>
-      <span class="fab fa-twitter-square">&nbsp;</span>
-      <span class="fab fa-instagram">&nbsp;</span>
-      <span class="fab fa-linkedin">&nbsp;</span>
-      <span class="fas fa-envelope-square">&nbsp;</span>
+      <a href="#" class="social"><span class="fab fa-facebook-square">&nbsp;</span></a>
+      <a href="#" class="social"><span class="fab fa-google-plus-square">&nbsp;</span></a>
+      <a href="#" class="social"><span class="fab fa-twitter-square">&nbsp;</span></a>
+      <a href="#" class="social"><span class="fab fa-instagram">&nbsp;</span></a>
+      <a href="#" class="social"><span class="fab fa-linkedin">&nbsp;</span></a>
+      <a href="#" class="social"><span class="fas fa-envelope-square">&nbsp;</span></a>
     </div>
     <div class="copyright">Copyright &copy; Stefan Klinkusch, 2018</div>
   </footer>
