added input form fields in the footer

--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
     </article>
   </main>
   <footer>
+    <form action="" method="POST">
+      <fieldset>
+        <legend>Subscribe to my newsletter</legend>
+        <input type="name" placeholder="Enter your name">
+        <input type="email" placeholder="Enter your email address">
+        <button type="submit">Subscribe</button>
+      </fieldset>
+    </form>
     <div class="icons">
       <a href="#" class="social"><span class="fab fa-facebook-square">&nbsp;</span></a>
       <a href="#" class="social"><span class="fab fa-google-plus-square">&nbsp;</span></a>
